--- a/ide-migration/css/migration.css
+++ b/ide-migration/css/migration.css
@@ -1,5 +1,6 @@
 .diff-view {
-  border: var(--sapElement_BorderWidth, .0625rem) solid var(--sapNeutralBorderColor, #6a6d70);
+  border: var(--sapElement_BorderWidth, .0625rem) solid var(--sapGroup_TitleBorderColor, #6a6d70);
+  height: 480px;
 }
 .wizard-form-container-style {
   max-width: 1600px;
